; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_parsedate.c_checkday.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_parsedate.c_checkday.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@weekday = common dso_local global i8** null, align 8
@Curl_wkday = common dso_local global i8** null, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @checkday to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkday(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i64, i64* %4, align 8
  %10 = icmp ugt i64 %9, 3
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i8**, i8*** @weekday, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 0
  store i8** %13, i8*** %6, align 8
  br label %17

14:                                               ; preds = %2
  %15 = load i8**, i8*** @Curl_wkday, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  store i8** %16, i8*** %6, align 8
  br label %17

17:                                               ; preds = %14, %11
  store i32 0, i32* %5, align 4
  br label %18

18:                                               ; preds = %33, %17
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %19, 7
  br i1 %20, label %21, label %36

21:                                               ; preds = %18
  %22 = load i8*, i8** %3, align 8
  %23 = load i8**, i8*** %6, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 0
  %25 = load i8*, i8** %24, align 8
  %26 = call i64 @strcasecompare(i8* %22, i8* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %21
  %29 = load i32, i32* @TRUE, align 4
  store i32 %29, i32* %7, align 4
  br label %36

30:                                               ; preds = %21
  %31 = load i8**, i8*** %6, align 8
  %32 = getelementptr inbounds i8*, i8** %31, i32 1
  store i8** %32, i8*** %6, align 8
  br label %33

33:                                               ; preds = %30
  %34 = load i32, i32* %5, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %5, align 4
  br label %18

36:                                               ; preds = %28, %18
  %37 = load i32, i32* %7, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %36
  %40 = load i32, i32* %5, align 4
  br label %42

41:                                               ; preds = %36
  br label %42

42:                                               ; preds = %41, %39
  %43 = phi i32 [ %40, %39 ], [ -1, %41 ]
  ret i32 %43
}

declare dso_local i64 @strcasecompare(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
